@@ -1,3 +1,12 @@
+2002-12-09  Moritz Schulte  <moritz@duesseldorf.ccc.de>
+
+	* lib.h: Fix pointer arg.
+	* lib.c (dir_entries_get): Likewise.
+	* lib.c (dir_entries_get): Fix typo.
+	(dir_entries_get): Change type of data_size to size_t.
+	* node.c (node_entries_get): Change type of dirent_data_size to
+	size_t.
+
 2002-12-08  Moritz Schulte  <moritz@duesseldorf.ccc.de>
 
 	* BUGS: Remove the memory-leak bug.
